# lbr_fri_idl

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  package.xml
.github/: CONTRIBUTING.md
msg/: LBRState.msg
srv/: FreeFormMove.srv  MoveToPose.srv
test/: test_command_interfaces.cpp
